--- a/style.css
+++ b/style.css
@@ -1,68 +1,155 @@
+/* stylelint-enable */
 * {
   box-sizing: border-box;
-
-body {
-    font-family: Open Sans;
-    background-color: #daf0e3
-    font-size: 2em;
-    font-weight: 600;
 }
-header nav ul
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
+ol, ul{
+  list-style: none;
+  
 }
-header nv ul li {
-    float: left;
-     border-right:1px solid #bbb;
-}
-
-header li:last-child {
-    border-right: none;
-  }
-
-header li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
+a{
     text-decoration: none;
-  }
-
-.header {
-font-family: "Arial Red", sans-serif;
-  font-size: 4.5em;
-  letter-spacing: -1px;
-  background-color: black;
-  color: white;
-  width: 100%;
+    color: inherit;
 }
-
+section a {
+    color: #26c99f;
+}
+section p {
+    float: none!important;
+}
 section h1 {
-    background-color: #25f00e;
-    color: #afedeb;
+    background-color: #cf1e1e;
+    color: #f8d4bf;
 }
 section h2 {
-    background-color: #000000;
-    color: #edafec;
-    border-top-right-radius: 30px;
-    border-top-left-radius: 30px;
-    border-bottom-right-radius: 30px;
-    border-bottom-left-radius: 30px;
+    background-color: #000000;;
+    color: #fdcaac;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
 }
 section h3 {
-    background-color: #ebf707;
-    color: #edd391;
+    background-color: #934949;
+    color: #c19b85;
+}
+/* House styles below */
+@font-face {
+    font-family: "American Typewriter";
+}
+*{
+    box-sizing: border-box;
 }
 body {
-    font-family: Open Sans;
-    background-color: #daf0e3
-    font-size: 2em;
-    font-weight: 600;
+    font-family: 'Roboto', sans-serif;
+    background-color: #dadada;
+    font-size: 1em;
+    font-weight: 500;
+    /* font-size: 1.5rem; */
 }
-h1,h2,h3 {
-    font-weight: bold;
-    padding-bottom: 2px;
+
+header{
+  width: 100%;
+}
+header nav ul{
+    text-align: center;
+    display: block;
+    margin: 0 auto;
+    width: max-content;
+}
+header nav ul li{
+  margin-bottom: 5px;
+  color: #77f;
+  width: max-content;
+}
+header nav ul li:nth-child(1){
+  float: left;
+}
+header nav ul li:nth-child(2){
+  float: right;
+}
+header nav ul li:nth-child(3){
+  float: right;
+}
+h1, h2, h3, h4, h5{
+  font-weight: bold;
+  padding-bottom: 1px;
+}
+h1{
+  font-size: 1.602em;
+  line-height:2em;
+}
+h2{
+  font-size: 1.424em;
+  line-height:1.5em;
+}
+h3{
+  font-size: 1.266em;
+  line-height:1.3em;
+}
+h4{
+  font-size: 1.125em;
+}
+li{
+  padding-left: 10px;
+}
+p ~ p{
+  padding-top: 5px;
+}
+nav{
+  height: 30px;
+  margin-top: 10px;
+}
+section{
+  padding: 10px 0;
+}
+section section{
+  padding: 0 10px;
+}
+main{
+  padding: 0 10px;
+}
+@media screen and (min-width: 700px){
+  section{
+    height: max-content;
+    display: inline-block;
+  }
+  section h1, section p{
+    float: left;
+  }
+  .image-holder img{
+    width: auto;
+  }
+  .image-holder img:nth-child(2n){
+    float: left;
+  }
+  .image-holder img:nth-child(2n+1){
+    float: right;
+  }
+}
+@media screen and (min-width: 1050px){
+  body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  main{
+    width: 1050px;
+  }
+}
+img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    padding: 5px 0;
+}
+iframe {
+  width: 100%;
+  padding: 10px 0;
+}
+footer {
+   position: fixed;
+   bottom: 0;
+   width: 100%;
+   height: 60px;   /* Height of the footer */
+   background: #D2B48C;
 }
