--- a/style.css
+++ b/style.css
@@ -1,163 +1,74 @@
-/* stylelint-enable */
-* {
+/* Box sizing rules */
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
-ol, ul{
+
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role='list'],
+ol[role='list'] {
   list-style: none;
-  
 }
-a{
-    text-decoration: none;
-    color: inherit;
+
+/* Set core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
 }
-section a {
-    color: #26c99f;
-}
-section p {
-    float: none!important;
-}
-section h1 {
-    background-color: #cf1e1e;
-    color: #f8d4bf;
-}
-section h2 {
-    background-color: #000000;;
-    color: #fdcaac;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
-    border-bottom-left-radius: 20px;
-}
-section h3 {
-    background-color: #934949;
-    color: #c19b85;
-}
-/* House styles below */
-@font-face {
-    font-family: "American Typewriter";
-}
-*{
-    box-sizing: border-box;
-}
+
+/* Set core body defaults */
 body {
-    font-family: 'Roboto', sans-serif;
-    background-color: #dadada;
-    line-height: 1.5;
-	  color:#262626;
-    font-size: 2em;
-    font-weight: 500;
-    /* font-size: 1.5rem; */
+  min-height: 100vh;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
 }
-p {
-	font-family: 'Roboto', sans-serif;
-	font-size:2em;
-	line-height: 1.5;
-	color:red;
-	
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
 }
-header{
-  width: 100%;
+
+/* Make images easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
 }
-header nav ul{
-    text-align: center;
-    display: block;
-    margin: 0 auto;
-    width: max-content;
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
 }
-header nav ul li{
-  margin-bottom: 5px;
-  color: #77f;
-  width: max-content;
-}
-header nav ul li:nth-child(1){
-  float: left;
-}
-header nav ul li:nth-child(2){
-  float: right;
-}
-header nav ul li:nth-child(3){
-  float: right;
-}
-h1, h2, h3, h4, h5{
-  font-weight: bold;
-  padding-bottom: 1px;
-}
-h1{
-  font-size: 1.602em;
-  line-height:2em;
-}
-h2{
-  font-size: 1.424em;
-  line-height:1.5em;
-}
-h3{
-  font-size: 1.266em;
-  line-height:1.3em;
-}
-h4{
-  font-size: 1.125em;
-}
-li{
-  padding-left: 10px;
-}
-p ~ p{
-  padding-top: 5px;
-}
-nav{
-  height: 30px;
-  margin-top: 10px;
-}
-section{
-  padding: 10px 0;
-}
-section section{
-  padding: 0 10px;
-}
-main{
-  padding: 0 10px;
-}
-@media screen and (min-width: 700px){
-  section{
-    height: max-content;
-    display: inline-block;
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+   scroll-behavior: auto;
   }
-  section h1, section p{
-    float: left;
+  
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
   }
-  .image-holder img{
-    width: auto;
-  }
-  .image-holder img:nth-child(2n){
-    float: left;
-  }
-  .image-holder img:nth-child(2n+1){
-    float: right;
-  }
-}
-@media screen and (min-width: 1050px){
-  body{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  main{
-    width: 1050px;
-  }
-}
-img{
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    padding: 5px 0;
-}
-iframe {
-  width: 100%;
-  padding: 10px 0;
-}
-footer {
-   position: fixed;
-   bottom: 0;
-   width: 100%;
-   height: 60px;   /* Height of the footer */
-   background: #D2B48C;
 }
