--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,8 @@ section p {
     float: none!important;
 }
 section h1 {
-    background-color: #cf1e1e;
-    color: #f8d4bf;
+    background-color: #7F00FF;
+    color: #000000;
 }
 section h2 {
     background-color: #00FFFF;
