--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ section h3 {
 }
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: #CBC3E3;
+    background-color: #D3D3D3;
     font-size: 1em;
     font-weight: 500;
     /* font-size: 1.5rem; */
