--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-/* stylelint-enable */
-* {
-  box-sizing: border-box;
-}
 ol, ul{
   list-style: none;
   
@@ -12,15 +8,12 @@ a{
 section a {
     color: #FF4433;
 }
-section p {
-    float: none!important;
-}
 section h1 {
-    background-color: #7F00FF;
+    background-color: #DE3163;
     color: #000000;
 }
 section h2 {
-    background-color: #00FFFF;
+    background-color: #DF0174;
     font-size: 2em;
     color: #000000;
     border-top-left-radius: 30px;
@@ -30,21 +23,20 @@ section h2 {
 }
 section h3 {
     background-color: #98FB98;
-    color: #000000;
+    color: #FFFFFF;
 }
 /* House styles below */
 @font-face {
     font-family: "American Typewriter";
 }
-*{
-    box-sizing: border-box;
+:-webkit-any(article, aside, nav, section) h1 {
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
 }
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: #D3D3D3;
+    background-color: #F08080;
     font-size: 1em;
-    font-weight: 500;
-    /* font-size: 1.5rem; */
 }
 
 header{
@@ -74,8 +66,8 @@ h1, h2, h3, h4, h5{
   font-weight: bold;
 }
 h1{
-  font-size: 3em;
-  line-height:2.5em;
+  font-size: 2.5em;
+  line-height:1.5em;
 }
 }
 h3{
@@ -93,12 +85,7 @@ p ~ p{
   padding-top: 5px;
 }
 p {
-    display: block;
-    margin-block-start: 1em;
     font-weight: bold;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
 }
 nav{
   height: 30px;
